plugins {
    id 'java-library'
    id "me.champeau.jmh" version "0.7.2"
}

repositories {
    mavenCentral()
}

dependencies {
    implementation 'com.jsoniter:jsoniter:0.9.19'
    implementation 'software.amazon.smithy:smithy-model:1.45.0'
    testImplementation 'org.junit.jupiter:junit-jupiter:5.10.0'
    testImplementation "org.junit.jupiter:junit-jupiter-params:5.10.0"
    testImplementation "org.hamcrest:hamcrest:2.1"
}

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(17)
    }
}

tasks.named('test') {
    useJUnitPlatform()
}

jmh {
    warmupIterations = 2
    iterations = 3
    fork = 1
}
